Second great rewriting of this article

--- a/src/pt/frigustell.mdx
+++ b/src/pt/frigustell.mdx
@@ -191,8 +191,8 @@ democráticos de Waydines &mdash; o Partido Democrático Popular &mdash; buscava
 dentro de Waydines, por meio de mudança de nome, caráter nacional e bandeira e levando as políticas
 antigas de Kamchatskiy para Waydines. A ambição e caráter do PDP era grande, e esta foi a razão para
 que, no grupo onde se reunia os membros do partido, Don Raviollone uma segunda vez trouxesse a tona
-a proposta de criar um novo país, dessa vez, onde todos iriam construir juntos e estar unidos para o
-futuro incerto que aguardava o novo Reinado de Frigustell.
+a proposta de criar um novo país, dessa vez, onde todos iriam construir juntos uma nova nação e 
+estar unidos para o futuro incerto que aguardava o novo Reinado de Frigustell.
 
 ## Independência de Frigustell
 
@@ -261,7 +261,8 @@ perdido, sobrando apenas a resposta de Don Ravi I à Nordenbürgen.
 No dia 8 de Junho 2024, devido ao rápido crescimento em atividade e populacional de Frigustell, Don
 Ravi I renomeia Frigustell, de Sacro Reinado de Frigustell para Sacro Império de Frigustell, mudando
 principalmente sua bandeira, de uma mais contemporânea que relevava a temática montanhosa de
-Frigustell para a sua atual, similar à bandeira dos atuais países nórdicos.
+Frigustell para a sua atual, similar à bandeira dos atuais países nórdicos e que reflete a fé 
+divinista.
 
 <Picture
     image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1745549356/2025-03-15_21.35.27_yuwepw.png"
@@ -269,8 +270,8 @@ Frigustell para a sua atual, similar à bandeira dos atuais países nórdicos.
 />
 
 Juntamente de sua bandeira, a capital Santuário foi expandida, agora abrigando o complexo do World
-Trade Center, o maior e mais alto complexo de todos os SMPs e também a sede do divinismo, a Igreja
-de Bruno.
+Trade Center, o maior e mais alto complexo de todos os SMPs e também a sede do divinismo, a Basílica
+de São Alfredo.
 
 # História Alternativa
 
@@ -287,11 +288,12 @@ madeísmo.
     description="Capa do Diário de Ravi Mikélagos, escrito por Don Ravi I."
 />
 
-Nesta versão, contada pelo Diário de Ravi Mikélagos, a Igreja de Bruno, administrada pela família de
-Ravi Mikélagos (Alfredo Mikélagos, Hermína Facchin e Bruno Mikélagos Facchin) crescia rapidamente em
-membros por toda República de Waydines (aproximadamente durante a segunda república de Waydines), o
-que atraiu a atenção das autoridades mais ortodoxas do madeísmo, vinculadas com o governo, que
-desencadearam perseguições e linchamentos contra os divinistas.
+Nesta versão, contada pelo Diário de Ravi Mikélagos, a [Ordem da Luz Divina](Divinismo), 
+administrada  pela  família de Ravi Mikélagos (Alfredo Mikélagos, Hermína Facchin e 
+[Bruno Mikélagos Facchin](São_Bruno)) crescia rapidamente em membros por toda República de Waydines 
+(aproximadamente durante a segunda república de Waydines), o que atraiu a atenção das autoridades 
+mais ortodoxas do madeísmo, vinculadas com o governo, que desencadearam perseguições e linchamentos 
+contra os divinistas.
 
 Durante uma das visitas da família Mikélagos a um dos estados não-incorporados da república, foram
 raptados na volta para casa por extremistas da Igreja de Made, vinculados às autoridades ortodoxas
@@ -325,21 +327,22 @@ ortodoxo do madeísmo.
 
 A absolução das sentenças e o rendimento do governo perante as autoridades foi totalmente repudiado
 pela população, grande parte madeísta, que após alguns dias se rebelaram contra o governo e a
-igreja, o que levou à queda da Segunda República de Waydines (baseado no fato real da guerra civil
-de Waydines de 9 de Outubro de 2022).
+igreja, o que levou à queda da Segunda República de Waydines (baseado no fato real da [guerra civil
+de Waydines](Guerra_Civil_de_Waydines) de 9 de Outubro de 2022).
 
 ## Fundação de Frigustell
 
-Enquanto ocorria os julgamentos e a guerra civil, certos membros voltaram às suas casas pegar seus
-pertences para se migrarem à "terra prometida". Ravi liderou os membros remanescentes da igreja
-divinista para a terra prometida com assistência de seu deus Adonaios, que se situava no continente
-de Chi'ro, contendo uma grande planície perto de uma cadeia de montanhas, onde habitavam povos
-tribais, praticantes de diferentes culturas, mas todos compartilhando uma mesma língua: o Mandarim.
+Enquanto ocorria os julgamentos e até a guerra civil, certos membros voltaram às suas casas pegar 
+seus pertences para se migrarem à "terra prometida". Ravi liderou os membros remanescentes da igreja
+divinista, com assistência de seu deus Adonaios, para a terra prometida, que se situa no continente 
+de [Chi'ro](Chi'ro), contendo uma grande planície perto de uma cadeia de montanhas onde habitavam 
+povos tribais, praticantes de diferentes culturas, mas todos compartilhando uma mesma 
+língua: o Mandarim.
 
-Os divinistas rapidamente se integraram com a primeira tribo que entraram em contato, a tribo Nong (
-农), que habitam o que é hoje em dia a cidade de Xanadu. Composta por agricultores avançados, a
-tribo Hua foi a tribo mais pacífica do continente de Chi'ro, logo, foi a que melhor se durou ao
-longo dos anos e após a unificação das tribos para o Império de Frigustell.
+Os divinistas rapidamente se integraram com a primeira tribo que entraram em contato, a tribo Nong 
+(农), cuja cultura habita o que é hoje em dia a cidade de Xanadu. Composta por agricultores 
+avançados, a tribo Hua foi a tribo mais pacífica do continente de Chi'ro, logo, foi a que melhor se 
+durou ao longo dos anos e após a unificação das tribos para o Império de Frigustell.
 
 Após entrar em contato com as outras tribos aliadas à Nong, a tribo Hua (花) deu aos divinistas um
 pedaço de terra no qual poderiam construir o Santuário, no começo sendo apenas uma pequena vila com
@@ -347,18 +350,19 @@ casas simples e uma única igreja.
 
 Como consequência de sua migração, os divinistas ajudaram as tribos do continente de Chi'ro com as
 tecnologias existentes em Waydines, compartilhando livros, enciclopédias, assim como catalogando a
-linguagem das tribos, que era, até então, desconhecida para os waydineenses. Rapidamente, as tribos
-se evoluiram tecnologicamente, assim como Santuário, que cresceu demograficamente, passando dos 500
-habitantes e assim expandindo a primeira igreja de Santuário e surgindo as primeiras oficinas
-mecanizadas de Santuário, um lugar fundado para adorar a seu deus Adonaios por ter salvo-os da morte
-e pelos sacrifícios de Alfredo e Hermína para a propagação da religião divinista.
+linguagem das tribos, que era, até então, desconhecida para os waydineenses. Logo, as tribos 
+passaram por uma revolução tecnológica, assim como Santuário, que cresceu demograficamente, passando
+dos 500 habitantes e assim [expandindo a primeira igreja de Santuário](Basílica_de_São_Alfonso) e 
+surgindo as primeiras oficinas mecanizadas de Santuário, um lugar fundado para adorar a seu deus 
+Adonaios por ter salvo-os da morte e pelos sacrifícios de Alfredo e Hermína para a propagação da 
+religião divinista.
 
 Durante uma procissão ao monte Gnosis, Bruno, o até então padre da primeira igreja de Santuário, foi
 contatado por Adonaios no topo do monte &mdash; testemunhado por vinte pessoas &mdash; que lhe deu
 as leis divinistas e sabedorias, que serão contidas no Diário de Ravi Mikélagos e em outros livros,
 assim como profecias do futuro. Após ter voltado para Santuário, na casa de Ravi, Bruno contou a ele
-as coisas que Adonaios havia lhe contado, e ambos festejaram a noite toda, assim como as testemuhas
-em suas próprias casas; fundando-se no dia seguinte o Reinado de Frigustell e a Igreja de Bruno após
+as coisas que Adonaios havia lhe dito, e ambos festejaram a noite toda, assim como as testemuhas em 
+suas próprias casas; fundando-se no dia seguinte o Reinado de Frigustell e a Igreja de Bruno após
 Bruno ser consagrado o segundo patriarca da igreja divinista (o primeiro sendo Alfredo).
 
 Após isto, Frigustell continuou se expandindo, havendo pequenas batalhas entre a nação e a nova
@@ -403,7 +407,7 @@ com boa parte das leis e regimentos sendo ditados pelo imperador da nação.
 />
 
 Fora sua política, que se expandia para acomodar os novos cidadãos do império, Frigustell começa a
-expandir seu suas forças aramdas e forças especiais, assinalando cidadãos para postos específicos e
+expandir suas forças aramdas e forças especiais, assinalando cidadãos para postos específicos e
 padronizando equipamentos entre suas forças. É criada a força aérea e o
 [Esquadrão Flecha](Esquadrão_Flecha), que está ainda em formação.
 
@@ -426,7 +430,7 @@ deslocamento para posições.
 
 # Cultura
 
-A cultura frigustelliana, por vezes chamada de cultura divinista, possui influências de Mitterfurt e
+A cultura frigustelliana, por vezes chamada de cultura divinista, possui influências de Brazilburg e
 especialmente Kamchatskiy, dada a forte hereditariedade destes locais e a origem de seus cidadãos.
 Quase todos os cidadãos de Frigustell hoje em dia fazem parte da comunidade Monkeymill, um servidor
 do Discord voltado para jogos, conversas e eventos, seus membros são exclusivamente lusófonos.
@@ -458,3 +462,44 @@ _Excerto do Diário de Ravi Mikélagos_
 
 O Sacro Império de Frigustell adotou este milagre solar como seu símbolo nacional, dada sua grande
 importância, estando presente tanto em seu brasão quanto em suas diversas bandeiras e logotipos.
+
+## Arquitetura
+
+<Picture
+    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1748316607/2024-09-08_17.22.19_mjjsir.png"
+    description="Sede do poder legislativo e judiciário do Império de Frigustell durante o dia."
+/>
+
+Fora seu repertório cultural religioso, Frigustell possui um modo arquitetônico único, que mistura o 
+estilo modernista com o mais notório estilo paladiano, neoclassico e art nouveau, principalmente em 
+seus prédios públicos, como o complexo do World Trade Center, que é o maior complexo de todos os 
+SMPs no estilo modernista original das torres gêmeas de Nova Iorque, e a casa do poder legislativo e 
+judiciário do Império de Frigustell, em um estilo semelhante ao gótico presente do Palácio de 
+Westminster. A casa do legislativo e judiciário está para ser repaginada.
+
+O Ministério da Infraestrutura é o responsável pela organização da construção de edifícios públicos 
+de Frigustell, e, pela grande escala dos edifícios, o ministério adota a escrituração contábil de
+materiais e recursos, seguindo o 
+<a href="https://pt.wikipedia.org/wiki/M%C3%A9todo_das_partidas_dobradas">Método das Partidas Dobradas</a> 
+para garantir que toda origem de material tenha uma aplicação correspondente, evitando fraudes e
+desvios de recursos.
+
+<Picture 
+    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1748316676/2024-07-09_03.09.31_dchbce.png"
+    description="Foto noturna da muralha de Santuário"
+/>
+
+Além dos seus prédios governamentais, Santuário também adota um espírito bizantino por meio de sua 
+mais extensa construção até agora, as Muralha de Santuário; uma réplica da muralha de Constantinopla
+, com torres de vigia e uma estreita porta de entrada, que é a entrada principal da cidade de 
+Santuário. A muralha foi construída para proteger e retardar o avanço à cidade pelos invasores e 
+ataques, principalmente de canhões. O espírito bizantino da cidade de Santuário reflete a raiz 
+religiosa mais forte do divinismo: o cristianismo ortodoxo oriental, que é a base de inspiração para
+as tradições do divinismo.
+
+Desde Kamchatskiy, Frigustell herda uma característica arquitetônica de eficíos grandes e imponentes
+, como é o caso das suas muralhas, sede legislativa, World Trade Center e a Basílica de São Alfredo.
+Pelo benefício de serem edifícios que refletem o espírito de riqueza da nação, elas podem acabar por
+ser extremamente caras e ostentosas em uma pequena e possivelmente limitada economia dos SMPs, assim
+por também demorarem para serem construídas, o que fez com que Frigustell se dependa da automação e 
+do mod Create para construir seus edifícios em tempos menores. 
