Final fixed to Frigustell's article

--- a/src/pt/frigustell.mdx
+++ b/src/pt/frigustell.mdx
@@ -7,10 +7,10 @@ short_description: "Nação do Minecraft"
 
 **Frigustell**, ou o **Sacro Império de Frigustell**, é uma
 [monarquia](https://pt.wikipedia.org/wiki/Monarquia) semi-constitucional soberana existente desde o
-[Cup SMP 1](Cup_SMP_1), sucessora da
-[República Democrática de Kamchatskiy](República_Democrática_de_Kamchatskiy). É também o único país
-a compartilhar a etnia [brazilburguesa](Brazilburg) com [Waydines](Waydines), sua nação-prima. O
-país também possui uma população de 24 cidadãos (2025), fazendo-o a nação mais populosa do mundo.
+[Cup SMP 1](Cup_SMP_1), sucessora da [Kamchatskiy](República_Democrática_de_Kamchatskiy). É também o
+único país a compartilhar a etnia [brazilburguesa](Brazilburg) com [Waydines](Waydines), sua
+nação-prima. O país também possui uma população de 24 cidadãos (2025), fazendo-o a nação mais
+populosa do mundo.
 
 <QuickFacts title="Sacro Império de Frigustell">
     <CountrySymbols
@@ -162,9 +162,9 @@ Apesar disso, o plebiscito aconteceu em grande parte por influência direta de
 [Cupertino](Cupertino_Kurt), que convenceu o então presidente Don Raviollone a fazer um plebiscito
 pela união, o mesmo convenceu a população de Kamchatskiy a se juntar.
 
-Dez dias após o fim do Don SMP 2, no dia 20 de Janeiro de 2023 a República Democrática de
-Kamchatskiy se unia novamente com Waydines, permanecendo desta maneira por três meses até a criação
-de um novo país por Don Raviollone: O Reinado de Frigustell.
+Dez dias após o fim do Don SMP 2, no dia 20 de Janeiro de 2023 a Kamchatskiy se unia novamente com
+Waydines, permanecendo desta maneira por três meses até a criação de um novo país por Don
+Raviollone: O Reinado de Frigustell.
 
 Mesmo unidos pacificamente, houve conflitos de interesses entre Cupertino e Don Raviollone dentro da
 mais nova Terceira República de Waydines, enquanto Don Raviollone procurava fazer parte do partido
@@ -270,7 +270,7 @@ Frigustell para a sua atual, similar à bandeira dos atuais países nórdicos.
 
 Juntamente de sua bandeira, a capital Santuário foi expandida, agora abrigando o complexo do World
 Trade Center, o maior e mais alto complexo de todos os SMPs e também a sede do divinismo, a Igreja
-de Bruno.
+de [Bruno](Brunoiso).
 
 # História Alternativa
 
@@ -372,7 +372,7 @@ estados, agora chamados de províncias, não possuem mais suas próprias constit
 penal; agora possuem natureza municipal e contam com uma prefeitura composta quase exlusivamente de
 cleros da Igreja de Bruno. Essa mudança de sistema mais se igualou à mão de obra disponível para
 tomarem estas funções; uma melhora significativa em comparação ao sistema extenso, subdimensionado e
-supérfluo da República Democrática de Kamchatskiy.
+supérfluo da Kamchatskiy.
 
 Diferentemente de Kamchatskiy, Frigustell adota um imperador como líder da nação, e além do
 imperador, o poder executivo se separa em ministérios, como o Ministério da Economia, Ministério da
@@ -386,7 +386,7 @@ modo, adotou o sistema monárquico semi-constitucional, na qual o imperador é o
 é subordinado ao primeiro-ministro, diferente de uma monarquia constitucional. A dinastia atual de
 Frigustell é a Dinastia Ravileence, fundadora de Frigustell e, de acordo com a história alternativa,
 escolhidos pelo deus divinista para serem líderes; o monarca atual de Frigustell &mdash; Don Ravi I
-&mdash; também é o segundo em comando da Igreja de Bruno, com [São Bruno](São_Bruno) também fazendo
+&mdash; também é o segundo em comando da Igreja de Bruno, com Brunoiso também fazendo
 parte da Dinastia Ravileence.
 
 Frigustell possui um sistema judiciário organizado em sua constituição, porém, não possui pessoas o
@@ -410,7 +410,7 @@ padronizando equipamentos entre suas forças. É criada a força aérea e o
 As forças armadas procuravam criar seus próprios modelos de tanques de guerra e aviões, porém, com
 os SMPs não contando com mods capazes de fazer isso, seu desenvolvimento foi adiado. Apesar da
 estagnação, a força aérea de Frigustell adota os modelos Æ-01 "Asa de Anjo", inspirados diretamente
-no protótiro do F-22 chamado de YF-23, bombardeiros táticos WM-01 "Widowmaker", inspirados no modelo
+no protótipo do F-22 chamado de YF-23, bombardeiros táticos WM-01 "Widowmaker", inspirados no modelo
 do F-111 Aardvark e bombardeiros estratégicos BMR-01, inspirado no Avro Vulcan britânico.
 
 <Picture
@@ -438,7 +438,7 @@ religiosas, enquanto 44% são irreligiosas.
 
 A religião divinista toma conta da vida diária de grande parte dos cidadãos frigustellianos, membros
 ou não da Igreja de Bruno, ícones divinistas estão presentes nas bandeiras, ícones, festas e mais
-predominantemente na política, com o [Patriarca de Santuário](São_Bruno) participando de sessões
+predominantemente na política, com o *Patriarca de Santuário* participando de sessões
 legislativas do Conselho Real. Porém, o mais grande exemplo disto é a Festa Solar, sendo uma
 celebração divinista reconhecida como feriado no calendário nacional. A festa têm origem das
 histórias alternativas e comemora a salvação e conversão em massa milagrosa dos soldados
