Added Delta SMP 4 and small fixes on Delta SMP 1&2

--- a/src/pt/delta_smp_1_e_2.mdx
+++ b/src/pt/delta_smp_1_e_2.mdx
@@ -8,10 +8,11 @@ stub: true
 
 **Delta SMP 1** foi o primeiro SMP de Worldbuilding/[Towny](https://modrinth.com/plugin/towny) da
 franquia Delta SMP. Pouco é conhecido sobre este servidor além do fato de ser o primeiro SMP da
-série e que ele foi hosteado no _Aternos_, diferentemente do [Delta SMP 3](Delta_SMP_3) em diante.
+série e que ele foi hospedado no _Aternos_, diferentemente do [Delta SMP 3](Delta_SMP_3) em diante.
 
-Mesmo sendo um teste, o Delta SMP 1 ajudou no desenvolvimento de [Waydines](Waydines) e criou a
-possibilidade de futuros servidores, como foi o caso do Delta SMP 2 e seguintes.
+Mesmo sendo um teste, o Delta SMP 1 ajudou na consolidação de [Waydines](Waydines) fora do 
+[Fly SMP](FlySMP), o único lugar que existia até então, e criou a possibilidade de existirem futuros 
+servidores, como foi o caso do Delta SMP 2 e seguintes.
 
 <QuickFacts title="Delta SMP 1">
     <CountrySymbols
@@ -20,19 +21,41 @@ possibilidade de futuros servidores, como foi o caso do Delta SMP 2 e seguintes.
     />
     <tr>
         <td>Criação e duração</td>
-        <td>29 de junho de 2021 &mdash; desconhecido</td>
+    </tr>
+    <tr class="small">
+        <td>Início</td>
+        <td>29 de junho de 2021</td>
+    </tr>
+    <tr class="small">
+        <td>Fim</td>
+        <td>_Desconhecido_</td>
+    </tr>
+    <tr class="small">
+        <td>Duração</td>
+        <td>_Indeterminado_</td>
     </tr>
     <tr>
-        <td>Players ativos</td>
-        <td>~2</td>
+        <td>Players</td>
+        <td>
+            <ul>
+                <li>Don Ravi (Ativo)</li>
+                <li>Delta (Ativo)</li>
+                <li>Kid (Ocioso)</li>
+                <li>Faczki (Ocioso)</li>
+            </ul>
+        </td>
     </tr>
     <tr>
         <td>Pico de players</td>
         <td>~3</td>
     </tr>
+    <tr>
+        <td>Players ativos</td>
+        <td>~2</td>
+    </tr>
 </QuickFacts>
 
 # Players
 
-Os únicos jogadores do Delta SMP 1 foram [Don Ravi](Don_Ravi) e Delta ([Cupertino](Cupretino_Kurt)),
-com a possível participação de [Kid](Kid) e [Faczki](Faczki).
+Os únicos jogadores do Delta SMP 1 foram [Don Ravi](Don_Ravi) e [Delta](Cupertino_Kurt), com a 
+possível participação de [Kid](Kid) e Faczki.
