--- a/src/pt/delta_smp_3.mdx
+++ b/src/pt/delta_smp_3.mdx
@@ -5,14 +5,15 @@ short_description: "Servidor de Minecraft"
 snub: true
 ---
 
-Delta SMP 3 foi o terceiro servidor da franquia Delta SMP, foi um SMP igual aos anteriores e foi o
-primeiro a obter uma comunidade real, tendo a participação de pessoas como Tenp10tion, Anni,
-[Shazy](Shazy), [Banumuru](Banumuru), [Ray](Ray), etc. Este foi o primeiro servidor a ser hosteado
-no computador novo de [Cupertino](Cupertino), logo, houve melhor performance, com o lado ruim de não
-poder abrir sempre, porém isso pouco influenciou no sucesso do servidor, que durou por 1 mês.
+**Delta SMP 3** foi o terceiro servidor da franquia Delta SMP, foi um SMP igual aos anteriores e foi
+o primeiro a obter uma comunidade real, tendo a participação de pessoas como Tenp10tion, Anni,
+[Shazy](Shazy), [Banumuru](Brunoiso), [Ray](10hzRay), etc. Este foi o primeiro servidor a ser 
+hospedado no computador novo de [Cupertino](Cupertino), logo, houve melhor performance, com o lado 
+ruim de não poder abrir sempre, porém isso pouco influenciou no sucesso do servidor, que durou por 
+1 mês.
 
-Os players &mdash; Tenp10tion, Ray e Kid &mdash; fizeram suas bases, como Rockatanskiy, Jabaquara do
-Sul e [Hillpath](Hillpath), respectivamente. Porém apenas um país foi criado, sendo ele
+Os players &mdash; Tenp10tion, Ray e [Kid](Kid) &mdash; fizeram suas bases, como Rockatanskiy, 
+Jabaquara do Sul e [Hillpath](Hillpath), respectivamente. Porém apenas um país foi criado, sendo ele
 [Waydines](Waydines).
 
 O servidor terminou após Cupertino ter feito testes com partições de disco em seu Linux, o que
@@ -21,7 +22,18 @@ causou o servidor a ser completamente apagado.
 <QuickFacts title="Delta SMP 3">
     <tr>
         <td>Criação e duração</td>
-        <td>12 de janeiro de 2022 &mdash; 2 de fevereiro de 2022</td>
+    </tr>
+    <tr class="small">
+        <td>Início</td>
+        <td>17 de janeiro de 2022</td>
+    </tr>
+    <tr class="small">
+        <td>Fim</td>
+        <td>19 de fevereiro de 2022</td>
+    </tr>
+    <tr class="small">
+        <td>Duração</td>
+        <td>33 dias</td>
     </tr>
     <tr>
         <td>Players</td>
@@ -44,7 +56,7 @@ causou o servidor a ser completamente apagado.
     <tr>
         <td>País(es)</td>
         <td>
-            <CountryCitation country="Waydines" />
+            <CountryCitation country="Waydines"/>
         </td>
     </tr>
 </QuickFacts>
@@ -53,12 +65,11 @@ causou o servidor a ser completamente apagado.
 
 Houveram três principais eventos no Delta SMP 3, sendo eles:
 
--   Venda do terreno de Mitterfurt para Kid, que estabeleceu Hillpath no lugar;
-
--   Testes com armas nucleares, que foram primeiramente conceitualizadas por
-    [Wolfi Hraje](Wolfi_Hraje);
-
--   Segunda construção do [WTC](World_Trade_Center);
+```
+1. Venda do terreno de Mitterfurt para Kid, que estabeleceu Hillpath no lugar;
+2. Testes com armas nucleares, que foram primeiramente conceitualizadas por Wolfi Hraje;
+3. Segunda construção do WTC;
+```
 
 # Galeria
 
