Possible fix on Architecture section in Frigustell and eletric bogaloo

--- a/src/pt/delta smp 4.mdx
+++ b/src/pt/delta smp 4.mdx
@@ -68,10 +68,10 @@ A base de jogadores não foi composta de pessoas únicas, mas sim das que já pa
                     <CountryCitation country="Waydines"/>
                 </li>
                 <li>
-                    <CountryCitation country="Kamchatskiy"/>
+                    Kamchatskiy (semanas finais)
                 </li>
                 <li>
-                    <CountryCitation country="Seapath"/>
+                    Seapath
                 </li>
             </ul>
         </td>
