Fixes on Frigustell article, added Delta SMP 4 and miscellaneous

--- a/src/pt/delta_smp_3.mdx
+++ b/src/pt/delta_smp_3.mdx
@@ -7,7 +7,7 @@ snub: true
 
 Delta SMP 3 foi o terceiro servidor da franquia Delta SMP, foi um SMP igual aos anteriores e foi o
 primeiro a obter uma comunidade real, tendo a participação de pessoas como Tenp10tion, Anni,
-[Shazy](Shazy), [Banumuru](Banumuru), [Ray](Ray), etc. Este foi o primeiro servidor a ser hosteado
+[Shazy](Shazy), [Banumuru](Brunoiso), [Ray](Ray), etc. Este foi o primeiro servidor a ser hosteado
 no computador novo de [Cupertino](Cupertino), logo, houve melhor performance, com o lado ruim de não
 poder abrir sempre, porém isso pouco influenciou no sucesso do servidor, que durou por 1 mês.
 
@@ -21,18 +21,31 @@ causou o servidor a ser completamente apagado.
 <QuickFacts title="Delta SMP 3">
     <tr>
         <td>Criação e duração</td>
-        <td>12 de janeiro de 2022 &mdash; 2 de fevereiro de 2022</td>
+    </tr>
+    <tr class="small">
+        <td>Início</td>
+        <td>17 de janeiro de 2022</td>
+    </tr>
+    <tr class="small">
+        <td>Fim</td>
+        <td>17 de fevereiro de 2022</td>
+    </tr>
+    <tr class="small">
+        <td>Duração</td>
+        <td>31 dias</td>
     </tr>
     <tr>
         <td>Players</td>
         <td>
             <ul style="margin-left: 0">
+                <li>Anni (Ocioso)</li>
                 <li>Banumuru (Inativo)</li>
                 <li>Cupertino (Ativo)</li>
-                <li>Kid (Ativo)</li>
+                <li>[Kid](Kid) (Ativo)</li>
                 <li>Nylverion (Ativo)</li>
-                <li>Ravi (Ativo)</li>
+                <li>[Ravi](Ravi) (Ativo)</li>
                 <li>Ray (Ativo)</li>
+                <li>Shazy (Ocioso)</li>
                 <li>Tenp10tion (Inativo)</li>
             </ul>
         </td>
@@ -53,12 +66,11 @@ causou o servidor a ser completamente apagado.
 
 Houveram três principais eventos no Delta SMP 3, sendo eles:
 
--   Venda do terreno de Mitterfurt para Kid, que estabeleceu Hillpath no lugar;
-
--   Testes com armas nucleares, que foram primeiramente conceitualizadas por
-    [Wolfi Hraje](Wolfi_Hraje);
-
--   Segunda construção do [WTC](World_Trade_Center);
+```
+Venda do terreno de Mitterfurt para Kid, que estabeleceu Hillpath no lugar;
+Testes com armas nucleares, que foram primeiramente conceitualizadas por Wolfi Hraje;
+Segunda construção do [WTC](World_Trade_Center);
+```
 
 # Galeria
 
