--- a/src/pt/frigustell.mdx
+++ b/src/pt/frigustell.mdx
@@ -479,11 +479,7 @@ Westminster. A casa do legislativo e judiciário está para ser repaginada.
 
 O Ministério da Infraestrutura é o responsável pela organização da construção de edifícios públicos
 de Frigustell, e, pela grande escala dos edifícios, o ministério adota a escrituração contábil de
-materiais e recursos, seguindo o
-
-<a href="https://pt.wikipedia.org/wiki/M%C3%A9todo_das_partidas_dobradas">
-    Método das Partidas Dobradas
-</a>
+materiais e recursos, seguindo o <a href="https://pt.wikipedia.org/wiki/M%C3%A9todo_das_partidas_dobradas">Método das Partidas Dobradas</a>
 para garantir que toda origem de material tenha uma aplicação correspondente, evitando fraudes e desvios
 de recursos.
 
