Fixed Cupertino's article's layout being completely broken

--- a/src/pt/cupertino_kurt.mdx
+++ b/src/pt/cupertino_kurt.mdx
@@ -23,27 +23,39 @@ programador, escritor, historiador e teólogo servindo como presbítero no presb
     </tr>
     <tr>
         <td colSpan="2" class="text-center">
-            <ul class="">
-                <li>Primeiro-Ministro de [Waydines](Waydines)</li>
+            <ul>
+                <li>
+                    Primeiro-Ministro de <a href="Waydines">Waydines</a>
+                </li>
                 <li style="font-weight: 400">20 de outubro de 2022 &mdash; Hoje</li>
             </ul>
         </td>
     </tr>
     <tr>
         <td>Partido Político</td>
-        <td>[Social Democratas](Social_Democratas_(Waydines))</td>
+        <td>
+            <a href="Social_Democratas_(Waydines)">Social Democratas</a>
+        </td>
     </tr>
     <tr>
         <td>Crença</td>
-        <td>[Madeísmo](Madeísmo)</td>
+        <td>
+            <a href="Madeísmo">Madeísmo</a>
+        </td>
     </tr>
     <tr>
         <td>Origem</td>
-        <td>[Mitterfurt](Mitterfurt), Waydines</td>
+        <td>
+            <a href="Mitterfurt">Mitterfurt</a>, Waydines
+        </td>
     </tr>
     <tr>
-        <td>[Alma mater](https://en.wikipedia.org/wiki/Alma_mater)</td>
-        <td>Universidade de Mitterfurt</td>
+        <td>
+            <a href="https://pt.wikipedia.org/wiki/Alma_mater">Alma mater</a>
+        </td>
+        <td>
+            <a href="Universidade_de_Mitterfurt">Universidade de Mitterfurt</a>
+        </td>
     </tr>
     <tr>
         <td>Assinatura</td>
@@ -52,8 +64,12 @@ programador, escritor, historiador e teólogo servindo como presbítero no presb
         </td>
     </tr>
     <tr>
-        <td>Website</td>
-        <td>[cupertino.vercel.app](https://cupertino.vercel.app/)</td>
+        <td>
+            <i>Website</i>
+        </td>
+        <td>
+            <a href="https://cupertino.vercel.app/pt">cupertino.vercel.app</a>
+        </td>
     </tr>
 </QuickFacts>
 
