--- a/src/en/cupertino_kurt.mdx
+++ b/src/en/cupertino_kurt.mdx
@@ -23,27 +23,39 @@ also a programmer, writer, historian, and theologian serving as a presbyter in t
     </tr>
     <tr>
         <td colSpan="2" class="text-center">
-            <ul class="">
-                <li>Prime Minister of [Waydines](Waydines)</li>
+            <ul>
+                <li>
+                    Prime Minister of <a href="Waydines">Waydines</a>
+                </li>
                 <li style="font-weight: 400">October 20, 2022 &mdash; Present</li>
             </ul>
         </td>
     </tr>
     <tr>
         <td>Political Party</td>
-        <td>[Social Democrats](Social_Democrats_(Waydines))</td>
+        <td>
+            <a href="Social_Democrats_(Waydines)">Social Democrats</a>
+        </td>
     </tr>
     <tr>
         <td>Faith</td>
-        <td>[Madeism](Madeism)</td>
+        <td>
+            <a href="Madeism">Madeism</a>
+        </td>
     </tr>
     <tr>
         <td>Origin</td>
-        <td>[Mitterfurt](Mitterfurt), Waydines</td>
+        <td>
+            <a href="Mitterfurt">Mitterfurt</a>, Waydines
+        </td>
     </tr>
     <tr>
-        <td>[Alma mater](https://en.wikipedia.org/wiki/Alma_mater)</td>
-        <td>University of Mitterfurt</td>
+        <td>
+            <a href="https://en.wikipedia.org/wiki/Alma_mater">Alma mater</a>
+        </td>
+        <td>
+            <a href="University_of_Mitterfurt">University of Mitterfurt</a>
+        </td>
     </tr>
     <tr>
         <td>Signature</td>
@@ -53,7 +65,7 @@ also a programmer, writer, historian, and theologian serving as a presbyter in t
     </tr>
     <tr>
         <td>Website</td>
-        <td>[cupertino.vercel.app](https://cupertino.vercel.app/)</td>
+        <td><a href="https://cupertino.vercel.app/en">cupertino.vercel.app</a></td>
     </tr>
 </QuickFacts>
 
