Minor spelling mistake on translation

--- a/src/en/social_democrats_(waydines).mdx
+++ b/src/en/social_democrats_(waydines).mdx
@@ -157,7 +157,7 @@ Third Republic, as well as important legal frameworks, such as the
 [Electoral Code](https://en.wikipedia.org/wiki/Election_law) and legislation on
 [Devolution](https://en.wikipedia.org/wiki/Devolution), which decentralizes regional competencies.
 
-# Political Party
+# Political Profile
 
 The Social Democrats present themselves as a stable and moderate force, attractive to diverse social
 segments due to their emphasis on social equity, solid institutional reforms, and governmental
