--- a/src/pt/stellarigs.mdx
+++ b/src/pt/stellarigs.mdx
@@ -22,7 +22,7 @@ de Frigustell.
     </tr>
     <tr>
         <td>Cotação</td>
-        <td>[MRTX](MRTX)</td>
+        <td>[MTRX](MTRX)</td>
     </tr>
     <tr>
         <td>Atividade</td>
