<countrySymbols> to <Picture> and small fixes on Stellarigs

--- a/src/pt/delta smp 4.mdx
+++ b/src/pt/delta smp 4.mdx
@@ -20,9 +20,14 @@ A base de jogadores não foi composta de pessoas únicas, mas sim das que já pa
 [Seapath](Hillpath) e mais um tempo depois, [Kamchatskiy](Kamchatskiy).
 
 <QuickFacts title="Delta SMP 4">
-    <CountrySymbols 
-        coatOfArms="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741976009/sentry_gws6wu.webp"
-    />
+    <td colSpan="2">
+        <Picture
+            image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741976009/sentry_gws6wu.svg"
+            description="Logotipo do Delta SMP 4"
+            height="7rem"
+            centered={true}
+        />
+    </td>
     <tr>
         <td>Criação e Duração</td>
     </tr>
