--- a/src/pt/delta_smp_1_e_2.mdx
+++ b/src/pt/delta_smp_1_e_2.mdx
@@ -27,11 +27,11 @@ possibilidade de futuros servidores, como foi o caso do Delta SMP 2 e seguintes.
     </tr>
     <tr class="small">
         <td>Fim</td>
-        <td>_Desconhecido_</td>
+        <td><em>Desconhecido</em></td>
     </tr>
     <tr class="small">
         <td>Duração</td>
-        <td>_Indeterminado_</td>
+        <td><em>Indeterminado</em></td>
     </tr>
     <tr>
         <td>Players</td>
