--- a/src/pt/stellarigs.mdx
+++ b/src/pt/stellarigs.mdx
@@ -29,7 +29,7 @@ de Frigustell.
     </tr>
     <tr>
         <td>Cotação</td>
-        <td><a href="MRTX">MTRX</a></td>
+        <td><a href="MTRX">MTRX</a></td>
     </tr>
     <tr>
         <td>Atividade</td>
