--- a/src/pt/delta_smp_3.mdx
+++ b/src/pt/delta_smp_3.mdx
@@ -1,7 +1,7 @@
 ---
 id: "deltasmp3"
 title: "Delta SMP 3"
-short_description: "Servidor de Minecraft"
+short_description: "Servidor da Série Delta SMP"
 snub: true
 ---
 
