--- a/src/pt/frigustell.mdx
+++ b/src/pt/frigustell.mdx
@@ -2,7 +2,7 @@
 id: "frigustell"
 title: "Sacro Império de Frigustell"
 banner: "https://res.cloudinary.com/dkw4vrkc1/image/upload/v1743952341/Sacro_Imp%C3%A9rio_de_Frigustell_imweoy.png"
-short_description: "Nação do Minecraft"
+short_description: "País em Chi'ro"
 ---
 
 **Frigustell**, ou o **Sacro Império de Frigustell**, é uma
