--- a/src/pt/delta_smp_1_e_2.mdx
+++ b/src/pt/delta_smp_1_e_2.mdx
@@ -2,7 +2,7 @@
 id: "deltasmp1&2"
 title: "Delta SMP 1 e 2"
 banner: "https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741904553/ZazMnXF_ir4pei.png"
-short_description: "Servidores de Minecraft"
+short_description: "Servidores da Série Delta SMP"
 stub: true
 ---
 
