--- a/src/pt/stellarigs.mdx
+++ b/src/pt/stellarigs.mdx
@@ -2,6 +2,7 @@
 id: "stellarigs"
 title: "Stellarigs"
 short_description: "Empresa de Capital Aberto"
+embed_image: "https://res.cloudinary.com/dkw4vrkc1/image/upload/v1748358414/Companhia_Stellarigs_S.A._veexk5.png"
 ---
 
 **Stellarigs**, ou **Companhia Stellarigs S.A.**, é uma empresa estatal de capital aberto fundada
