--- a/src/pt/kamchatskiy.mdx
+++ b/src/pt/kamchatskiy.mdx
@@ -9,10 +9,10 @@ stub: true
 **Distrito de Kamchatskiy**, foi uma 
 [república](https://pt.wikipedia.org/wiki/Rep%C3%BAblica_democr%C3%A1tica) democrática 
 [socialista](https://pt.wikipedia.org/wiki/Socialismo) e 
-[federativa](https://pt.wikipedia.org/wiki/Federa%C3%A7%C3%A3o) que, como província, existiu desde
-8 de Janeiro de 2021 até [9 de Outubro de 2022](Guerra_Civil_de_Waydines) e, como nação, existiu 
-entre os períodos de 28 de Dezembro de 2020 até 8 de Janeiro de 2021 &mdash; como Brazilburg &mdash;
-e 9 de Outubro de 2022 até 15 de Janeiro de 2023 como Kamchatskiy.
+[federativa](https://pt.wikipedia.org/wiki/Federa%C3%A7%C3%A3o) soberana que, como província, 
+existiu desde 8 de Janeiro de 2021 até [9 de Outubro de 2022](Guerra_Civil_de_Waydines) e, como 
+nação, existiu entre os períodos de 28 de Dezembro de 2020 até 8 de Janeiro de 2021 &mdash; como 
+Brazilburg &mdash; e 9 de Outubro de 2022 até 15 de Janeiro de 2023 como Kamchatskiy.
 
 <QuickFacts title="República Democrática de Kamchatskiy">
     <CountrySymbols
