--- a/src/pt/kamchatskiy.mdx
+++ b/src/pt/kamchatskiy.mdx
@@ -7,8 +7,9 @@ stub: true
 ---
 **Kamchatskiy**, **República Democrática de Kamchatskiy**, **República de Kamchatskiy** ou 
 **Distrito de Kamchatskiy**, foi uma 
-[república](https://pt.wikipedia.org/wiki/Rep%C3%BAblica_democr%C3%A1tica) democrática 
-[socialista](https://pt.wikipedia.org/wiki/Socialismo) e 
+[república](https://pt.wikipedia.org/wiki/Rep%C3%BAblica_democr%C3%A1tica) 
+[socialista](https://pt.wikipedia.org/wiki/Socialismo) 
+[semidemocrática](https://pt.wikipedia.org/wiki/Democracia_guiada) e 
 [federativa](https://pt.wikipedia.org/wiki/Federa%C3%A7%C3%A3o) soberana que, como província, 
 existiu desde 8 de Janeiro de 2021 até [9 de Outubro de 2022](Guerra_Civil_de_Waydines) e, como 
 nação, existiu entre os períodos de 28 de Dezembro de 2020 até 8 de Janeiro de 2021 &mdash; como 
