Implement article for Elyium in portuguese

--- a/src/pt/uniao_elisiana.mdx
+++ b/src/pt/uniao_elisiana.mdx
@@ -47,7 +47,7 @@ habitantes (2024). A União Elisiana se descreve oficialmente como uma
         <td>
             <a href="https://pt.wikipedia.org/wiki/Gent%C3%ADlico">Gentílico</a>
         </td>
-        <td>Elisiano</td>
+        <td>Elisiano(a)</td>
     </tr>
     <tr>
         <td>Tipo</td>
