--- a/src/pt/xogunato_ryusei.mdx
+++ b/src/pt/xogunato_ryusei.mdx
@@ -32,7 +32,7 @@ Ryūsei. Sua capital é a cidade de Tenshikyo.
         <td>
             <a href="https://pt.wikipedia.org/wiki/Gent%C3%ADlico">Gentílico</a>
         </td>
-        <td>Ryūseita</td>
+        <td>Ryūseíta</td>
     </tr>
     <tr>
         <td>Governo</td>
