Remove subtitle from Elysium's Quick Facts

--- a/src/pt/elisia.mdx
+++ b/src/pt/elisia.mdx
@@ -10,7 +10,7 @@ por oceanos, situado em uma região de clima predominantemente temperado. Ele se
 forte coesão cultural e religiosa, além de uma paisagem geográfica variada e politicamente estável
 internamente.
 
-<QuickFacts title="Elísia" subtitle="Continente">
+<QuickFacts title="Elísia">
     <tr>
         <td colspan="2">
             <Picture
