Acknowledged the Ryusei Shogunate's article as a stub

--- a/src/en/ryusei_shogunate.mdx
+++ b/src/en/ryusei_shogunate.mdx
@@ -3,6 +3,7 @@ id: "ryusei"
 title: "Ryūsei Shogunate"
 banner: "https://res.cloudinary.com/dp8usdrjl/image/upload/v1748199127/ryuseiflag_cwz57b.svg"
 short_description: "Country in Elysium"
+stub: true
 ---
 
 The **Ryūsei Shogunate** (流星幕府, _Ryūsei Bakufu_) is a sovereign state located in the south of
