--- a/src/pt/xogunato_ryusei.mdx
+++ b/src/pt/xogunato_ryusei.mdx
@@ -3,6 +3,7 @@ id: "ryusei"
 title: "Xogunato Ryūsei"
 banner: "https://res.cloudinary.com/dp8usdrjl/image/upload/v1748199127/ryuseiflag_cwz57b.svg"
 short_description: "País em Elísia"
+stub: true
 ---
 
 O **Xogunato Ryūsei** (流星幕府, _Ryūsei Bakufu_) é um estado soberano localizado no sul do
