Last fix to Cupertino's article

--- a/src/en/cupertino_kurt.mdx
+++ b/src/en/cupertino_kurt.mdx
@@ -4,7 +4,7 @@ title: "Cupertino Kurt"
 short_description: "Player of Interest"
 ---
 
-**Cupertino von Kurt**, or **Cupertino Kurt**, is a Waydinean politician, serving as Prime Minister
+**Cupertino Amalie von Kurt**, or **Cupertino Kurt**, is a Waydinean politician, serving as Prime Minister
 since October, 2022. A member of the [Social Democrats](<Social_Democrats_(Waydines)>) party, he was
 previously king of [Waydines](Waydines) during the imperial period, president in the First Republic,
 and elected twice as Prime Minister in the [Second Republic](Second_Republic_of_Waydines). He is
