--- a/src/pt/cupertino_kurt.mdx
+++ b/src/pt/cupertino_kurt.mdx
@@ -4,7 +4,7 @@ title: "Cupertino Kurt"
 short_description: "Player Notório"
 ---
 
-**Cupertino von Kurt**, ou **Cupertino Kurt**, é um político waydineense, servindo como
+**Cupertino Amalie von Kurt**, ou **Cupertino Kurt**, é um político waydineense, servindo como
 Primeiro-Ministro desde 2022. Membro do partido [Social Democratas](<Social_Democratas_(Waydines)>),
 já foi rei de [Waydines](Waydines) durante o período imperial, presidente na Primeira República e
 eleito duas vezes Primeiro-Ministro na [Segunda República](Segunda_República_de_Waydines). Também é
