Finished article for Elysium in portuguese

--- a/src/pt/elisia.mdx
+++ b/src/pt/elisia.mdx
@@ -54,7 +54,7 @@ internamente.
                     <CountryCitation country="Xogunato Ryūsei" />
                 </li>
                 <li>
-                    <a href="Osmaria">Osmaria</a>
+                    <CountryCitation country="Osmaria" />
                 </li>
             </ul>
         </td>
@@ -105,4 +105,4 @@ pacífica, no reconhecimento mútuo e na culminação da União Elisiana.
 | --------------------------------------------- | --------- | ------------------------ | ------------------------ |
 | <CountryCitation country="Waydines" />        | 14        | [Mitterfurt](Mitterfurt) | Sim                      |
 | <CountryCitation country="Xogunato Ryūsei" /> | 12        | Tenshikyo                | Sim                      |
-| [Osmaria](Osmaria)                            | ?         | Shadar Logoth            | Não                      |
+| <CountryCitation country="Osmaria" />         | ?         | Shadar Logoth            | Não                      |
